[gd_scene load_steps=5 format=3 uid="uid://begelxebh4jyb"]

[ext_resource type="Script" path="res://Player/Weapons/machine_gun.gd" id="1_6m4bk"]
[ext_resource type="Texture2D" uid="uid://dokswxnxdx5vn" path="res://Textures/test/minigun.png" id="2_2rbq7"]
[ext_resource type="PackedScene" uid="uid://bchc61uc1l218" path="res://Player/Weapons/Accessories/damage_up.tscn" id="3_iveyu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c1515"]
radius = 339.013

[node name="MachineGun" type="Node2D"]
script = ExtResource("1_6m4bk")

[node name="MachineGunTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_2rbq7")

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_c1515")

[node name="ASTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DamageUp" parent="." instance=ExtResource("3_iveyu")]

[connection signal="over_charge" from="." to="." method="_on_over_charge"]
[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="MachineGunTimer" to="." method="_on_machine_gun_timer_timeout"]
[connection signal="timeout" from="ASTimer" to="." method="_on_as_timer_timeout"]
